--- a/trekants-beregner/public/style.css
+++ b/trekants-beregner/public/style.css
@@ -4,9 +4,19 @@
     box-sizing: border-box;
 }
 
-body {
+html {
     width: 100vw;
     height: 100vh;
-    display: grid;
-    place-items: center;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+div {
+    width: 200px;
+    margin: 8px;
 }
