Wrote more shit

--- a/Fysik-Brydning/public/style.css
+++ b/Fysik-Brydning/public/style.css
@@ -10,3 +10,16 @@ body {
     display: grid;
     place-items: center;
 }
+
+.input {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+input {
+    width: 50px;
+}
