--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
 a {
     display: block;
 }
+
+h1, h2 {
+    margin: 10px 0;
+}
+
+.footnote {
+    position: absolute;
+    bottom: 10px;
+}
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+}
+
+body {
+    padding: 0 8px;
+}
