--- a/Circle-Maker/public/style.css
+++ b/Circle-Maker/public/style.css
@@ -10,3 +10,9 @@ body {
     display: grid;
     place-items: center;
 }
+
+button {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
