--- a/lyd-drumpad/style.css
+++ b/lyd-drumpad/style.css
@@ -1,3 +1,7 @@
+:root {
+  --buttons-size: 80px;
+}
+
 html,
 body {
   width: 100%;
@@ -11,16 +15,38 @@ body {
   place-items: center;
 }
 
-/* Display buttons as a square with a side of 128 pixels */
 button {
-  width: 128px;
-  height: 128px;
+  width: var(--buttons-size);
+  height: var(--buttons-size);
+  outline: none;
+  border: none;
+  border-radius: 4px;
+  position: relative;
+  --color: red;
+  transition: all 50ms;
+}
+
+button:active,
+button.active {
+  background-color: var(--color);
+}
+
+button:active::after,
+button.active::after {
+  content: "";
+  position: absolute;
+  z-index: 99;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 0 20px var(--color);
 }
 
 /* Display all button in a .container in a grid with 6 columns */
 .container {
   display: grid;
-  grid-template-columns: repeat(6, minmax(128px, 1fr));
-  grid-gap: 1px;
+  grid-template-columns: repeat(4, minmax(var(--buttons-size), 1fr));
+  grid-gap: 2px;
   width: fit-content;
 }
