--- a/Funktion-spil/public/style.css
+++ b/Funktion-spil/public/style.css
@@ -12,6 +12,15 @@ body {
     overflow: hidden;
 }
 
+#message {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: monospace, 'Lucida Console';
+    font-size: 30px;
+}
+
 .shake {
     /* Start the shake animation and make the animation last for 0.5 seconds */
     animation: shake 0.4s; 
