--- a/Funktion-spil/public/style.css
+++ b/Funktion-spil/public/style.css
@@ -12,12 +12,22 @@ body {
     overflow: hidden;
 }
 
-#message {
+#game-over {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: monospace, 'Lucida Console';
+    display: grid;
+    place-items: center;
+    font-size: 20px;
+}
+
+#game-over[hidden] {
+    display: none;
+}
+
+#game-over .title {
     font-size: 30px;
 }
 
